--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "body-parser": "1.18.3",
     "express": "4.16.3",
+    "gravatar": "1.6.0",
     "jsonwebtoken": "8.3.0",
     "mongoose": "5.3.1",
     "passport": "0.4.0",
