--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "8.3.0",
     "mongoose": "5.3.1",
     "passport": "0.4.0",
+    "passport-facebook": "2.1.1",
+    "passport-facebook-token": "3.3.0",
     "passport-jwt": "4.0.0",
     "validator": "10.8.0"
   },
