--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dom": "0.0.3",
     "informed": "^1.10.7",
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "router": "^1.3.3"
   },
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -17,7 +21,6 @@
     "eject": "react-scripts eject",
     "compile:sass": "node-sass src/sass/main.scss src/index.css -w"
   },
-    "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
