--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "mongoose": "5.3.1",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "react-redux": "5.0.7",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
     "validator": "10.8.0"
   },
   "devDependencies": {
