--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "router": "^1.3.3"
