--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "jwt-decode": "2.2.0",
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
+    "react-css-loaders": "0.0.5",
     "react-dom": "^16.5.2",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "reakit": "^0.15.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "router": "^1.3.3"
