--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "John Irle <irlejohn@gmail.com> (http://johnirle.com/)",
   "license": "MIT",
@@ -13,6 +16,7 @@
     "axios": "0.18.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
+    "concurrently": "4.0.1",
     "express": "4.16.3",
     "gravatar": "1.6.0",
     "jsonwebtoken": "8.3.0",
