--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jive",
+  "name": "jive",
   "version": "1.0.0",
   "description": "Jive Web App",
   "main": "server.js",
@@ -30,6 +30,14 @@
     "yelp-fusion": "2.2.1"
   },
   "devDependencies": {
-    "nodemon": "1.18.4"
+    "eslint": "5.7.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
+    "nodemon": "1.18.4",
+    "prettier": "1.14.3"
   }
 }
